infrastructure/kubernetes/components/storage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boltchats-storage
  namespace: boltchats
  labels:
    app: boltchats-storage
spec:
  type: ClusterIP
  selector:
    app: boltchats-storage
  ports:
    - name: http
      port: 8002
      targetPort: 8002
      protocol: TCP
